refactor: Use abstract base class for UpdateNviCandidateStatusHandlerTest